<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/qBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/qBtn"/>

        <Button
            android:id="@+id/wBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/wBtn" />

        <Button
            android:id="@+id/eBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/eBtn" />

        <Button
            android:id="@+id/rBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/rBtn" />

        <Button
            android:id="@+id/tBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/tBtn"/>

        <Button
            android:id="@+id/yBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/yBtn"/>

        <Button
            android:id="@+id/uBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/uBtn"/>

        <Button
            android:id="@+id/iBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/iBtn"/>

        <Button
            android:id="@+id/oBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/oBtn"/>

        <Button
            android:id="@+id/pBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/pBtn"/>

        <Button
            android:id="@+id/åBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/åBtn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/aBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/aBtn"/>

        <Button
            android:id="@+id/sBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/sBtn"/>

        <Button
            android:id="@+id/dBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/dBtn"/>

        <Button
            android:id="@+id/fBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/fBtn"/>

        <Button
            android:id="@+id/gBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/gBtn"/>
        <Button
            android:id="@+id/hBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/hBtn"/>

        <Button
            android:id="@+id/jBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/jBtn"/>

        <Button
            android:id="@+id/kBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/kBtn"/>

        <Button
            android:id="@+id/lBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/lBtn"/>

        <Button
            android:id="@+id/æBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/æBtn"/>

        <Button
            android:id="@+id/øBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/øBtn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/zBtn"/>
        <Button
            android:id="@+id/xBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/xBtn"/>
        <Button
            android:id="@+id/cBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/cBtn"/>
        <Button
            android:id="@+id/vBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/vBtn"/>
        <Button
            android:id="@+id/bBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/bBtn"/>
        <Button
            android:id="@+id/nBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/nBtn"/>
        <Button
            android:id="@+id/mBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_apple"
            android:text="@string/mBtn"/>

    </LinearLayout>

</merge>